<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
  android:orientation="vertical"
	tools:context=".SavePasswordActivity"
  android:padding="4sp" >
    
  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">
      
    <com.google.android.material.textview.MaterialTextView 
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:text="@string/textview_loadpassword_headline"
      android:textSize="32dp" />
  </LinearLayout>
  
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32sp" >
  
    <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:hint="@string/hint_domain">
      <com.google.android.material.textfield.TextInputEditText 
        android:id="@+id/input_domain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="1" />
          
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:hint="@string/hint_username">
      
      <com.google.android.material.textfield.TextInputEditText 
        android:id="@+id/input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="1" />
        
    </com.google.android.material.textfield.TextInputLayout>
  </LinearLayout>
  
  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">
      
    <com.google.android.material.button.MaterialButton
      android:id="@+id/load_password_btn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/load_password_button_text"
      android:textSize="14dp" />
  </LinearLayout>
</LinearLayout>
