<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
  android:orientation="vertical"
	tools:context=".ui.ViewPasswordActivity"
  android:padding="4sp" >
    
  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">
      
    <com.google.android.material.textview.MaterialTextView 
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:text="@string/textview_viewpassword_headline"
      android:textSize="32dp" />
  </LinearLayout>
  
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32sp" >
  
    <com.google.android.material.textview.MaterialTextView 
      android:id="@+id/tv_domain"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:textSize="12dp" />

    <com.google.android.material.textview.MaterialTextView 
      android:id="@+id/tv_username"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:textSize="12dp" />
      
    <com.google.android.material.textview.MaterialTextView 
      android:id="@+id/tv_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:textSize="12dp" />
    
    <com.google.android.material.textview.MaterialTextView 
      android:id="@+id/tv_notes"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:textSize="12dp" />
    
    <com.google.android.material.textview.MaterialTextView 
      android:id="@+id/tv_updated_at"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:textSize="12dp" />
  </LinearLayout>
  
  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
      android:id="@+id/copy_password_btn"
      style="@style/Widget.Material3.Button.TonalButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/copy_password_button_text"
      android:textSize="14dp" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/update_password_btn"
      style="@style/Widget.Material3.Button.TonalButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/update_password_button_text"
      android:textSize="14dp" />
    
	<com.google.android.material.button.MaterialButton
      android:id="@+id/delete_password_btn"
      style="@style/Widget.Material3.Button.TonalButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/delete_password_button_text"
      android:textSize="14dp" />
  </LinearLayout>
</LinearLayout>
